--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
         <li><a href="/subjects">Предметы</a></li>
         <li><a href="/groups">Группы</a></li>
         <li><a href="/kurses">Курсы</a></li>
+        <li><a href="/kurators">Кураторы</a></li>
     </ul>
 </body>
 </html>
