--- a/templates/students.html
+++ b/templates/students.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Список студентов</h1>
+    <a href="/students/add">Добавить студента</a>
+    <a href="/">На главную</a>
     <table border="1">
         <tr>
             <th>ID</th>
@@ -17,6 +19,7 @@
             <th>Возраст</th>
             <th>Email</th>
             <th>Паспорт</th>
+            <th>Действия</th>
         </tr>
         {% for student in students %}
         <tr>
@@ -28,9 +31,15 @@
             <td>{{ student[5] }}</td>
             <td>{{ student[6] }}</td>
             <td>{{ student[7] }}</td>
+            <td>
+                <a href="{{ url_for('edit_student', ID_student=student[0]) }}">Редактировать</a>
+                <form method="POST" action="{{ url_for('delete_student', ID_student=student[0]) }}" style="display:inline;">
+                    <input type="submit" value="Удалить" onclick="return confirm('Вы уверены, что хотите удалить этого студента?');">
+                </form>
+            </td>
         </tr>
         {% endfor %}
     </table>
-    <a href="/">На главную</a>
+    
 </body>
 </html>
