--- a/templates/teachers.html
+++ b/templates/teachers.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Список преподавателей</h1>
+    <a href="/teachers/add">Добавить преподавателя</a>
+    <a href="/">На главную</a>
     <table border="1">
         <tr>
             <th>ID</th>
@@ -15,6 +17,7 @@
             <th>Имя</th>
             <th>Фамилия</th>
             <th>Email</th>
+            <th>Действия</th>
         </tr>
         {% for teacher in teachers %}
         <tr>
@@ -23,10 +26,16 @@
             <td>{{ teacher[2] }}</td>
             <td>{{ teacher[3] }}</td>
             <td>{{ teacher[4] }}</td>
+            <td>
+                <a href="{{ url_for('edit_teacher', ID_teacher=teacher[0]) }}">Редактировать</a>
+                <form method="POST" action="{{ url_for('delete_teacher', ID_teacher=teacher[0]) }}" style="display:inline;">
+                    <input type="submit" value="Удалить" onclick="return confirm('Вы уверены, что хотите удалить этого преподавателя?');">
+                </form>
+            </td>
         </tr>
         {% endfor %}
     </table>
-    <a href="/">На главную</a>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
 
