--- a/templates/upgrade_teacher.html
+++ b/templates/upgrade_teacher.html
@@ -4,29 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Редактировать студента</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
 <body>
     <h1>Редактировать студента</h1>
     <form method="POST">
-        <label>ID Кур:</label><br>
-        <input type="text" name="ID_kur" value="{{ student[1] }}" required><br>
-        <label>ID Группы:</label><br>
-        <input type="text" name="ID_group" value="{{ student[2] }}" required><br>
+        <label>ID предмета:</label><br>
+        <input type="text" name="ID_subject" value="{{ teacher[1] }}" required><br>
         <label>Имя:</label><br>
-        <input type="text" name="name" value="{{ student[3] }}" required><br>
+        <input type="text" name="name" value="{{ teacher[2] }}" required><br>
         <label>Фамилия:</label><br>
-        <input type="text" name="surname" value="{{ student[4] }}" required><br>
-        <label>Возраст:</label><br>
-        <input type="number" name="age" value="{{ student[5] }}" required><br>
+        <input type="text" name="surname" value="{{ teacher[3] }}" required><br>
         <label>Email:</label><br>
-        <input type="email" name="email" value="{{ student[6] }}" required><br>
-        <label>Паспорт:</label><br>
-        <input type="text" name="passport" value="{{ student[7] }}" required><br>
+        <input type="email" name="email" value="{{ student[4] }}" required><br>
         <input type="submit" value="Сохранить">
     </form>
-    <form method="POST" action="{{ url_for('delete_student', ID_student=student[0]) }}">
-        <input type="submit" value="Удалить" onclick="return confirm('Вы уверены, что хотите удалить этого студента?');">
+    <form method="POST" action="{{ url_for('delete_teacher', ID_teacher=teacher[0]) }}">
+        <input type="submit" value="Удалить" onclick="return confirm('Вы уверены, что хотите удалить этого преподавателя?');">
     </form>
-    <a href="/students">На главную</a>
+    <a href="/teachers">На главную</a>
 </body>
 </html>
