--- a/templates/subjects.html
+++ b/templates/subjects.html
@@ -9,28 +9,54 @@
 </head>
 <body>
     <h1>Список предметов</h1>
-    <a href="subjects/add">Добавить предмет</a>
-    <a href="/">На главную</a>
-    <table border="1">
-        <tr>
+    <a href="subjects/add" class="btn btn-primary">Добавить предмет</a>
+    <a href="/" class="btn btn-secondary">На главную</a>
+    <form method="GET" action="{{ url_for('view_subjects') }}" class="mt-3 mb-3">
+        <div class="row">
+            <div class="col">
+                <input type="number" name="ID_subject" class="form-control" placeholder="ID_предмета" value="{{ ID_subject }}">
+            </div>
+            <div class="col">
+                <input type="text" name="title" class="form-control" placeholder="Наименование" value="{{ title }}">
+            </div>
+            <div class="col">
+                <button type="submit" class="btn btn-success">Поиск</button>
+            </div>
+        </div>
+    </form>
+    <table class="table table-bordered">
+        <thead>
+            <tr>
             <th>ID_subjects</th>
             <th>title</th>
             <th>Действия</th>
             
-        </tr>
-        {% for subject in Subject %}
+            </tr>
+        </thead>
+        <tbody>
+            {% for subject in subjects.items %}
         <tr>
             <td>{{ subject.ID_subject }}</td>
             <td>{{ subject.title}}</td>
             <td>
-                <a href="{{ url_for('edit_subject', ID_subject=subject.ID_subject) }}">Редактировать</a>
+                <a href="{{ url_for('edit_subject', ID_subject=subject.ID_subject) }}" class="btn btn-warning">Редактировать</a>
                 <form method="POST" action="{{ url_for('delete_subject', ID_subject=subject.ID_subject) }}" style="display:inline;">
-                    <input type="submit" value="Удалить" onclick="return confirm('Вы уверены, что хотите удалить этот предмет?');">
+                    <input type="submit" value="Удалить" class="btn btn-danger" onclick="return confirm('Вы уверены, что хотите удалить этот предмет?');">
                 </form>
             </td>
         </tr>
         {% endfor %}
-    </table>
     
+        </tbody>
+    </table> 
+    <div class="pagination">
+        {% if subjects.has_prev %}
+            <a href="{{ url_for('view_subjects', page=subjects.prev_num, ID_subject = ID_subject, title=title) }}" class="btn btn-primary">Предыдущая</a>
+        {% endif %}
+        <span>Страница {{ subjects.page }} из {{ subjects.pages }}</span>
+        {% if subjects.has_next %}
+            <a href="{{ url_for('view_subjects', page=subjects.next_num, ID_subject = ID_subject, title = title) }}" class="btn btn-primary">Следующая</a>
+        {% endif %}
+    </div>
 </body>
 </html>
