--- a/templates/teachers.html
+++ b/templates/teachers.html
@@ -8,10 +8,23 @@
 </head>
 <body>
     <h1>Список преподавателей</h1>
-    <a href="/teachers/add">Добавить преподавателя</a>
-    <a href="/">На главную</a>
-    <table border="1">
-        <tr>
+    <a href="/teachers/add" class="btn btn-primary">Добавить преподавателя</a>
+    <a href="/" class="btn btn-secondary">На главную </a>
+    <form method="GET" action="{{ url_for('view_teachers') }}" class="mt-3 mb-3">
+        <div class="row">
+            <div class="col">
+                <input type="text" name="name" class="form-control" placeholder="Имя" value="{{ name }}">
+            </div>
+            <div class="col">
+                <input type="text" name="surname" class="form-control" placeholder="Фамилия" value="{{ surname }}">
+            </div>
+            <div class="col">
+                <button type="submit" class="btn btn-success">Поиск</button>
+            </div>
+        </div>
+    </form>
+    <table class="table table-bordered">
+        <thead> <tr>
             <th>ID</th>
             <th>ID Предмета</th>
             <th>Имя</th>
@@ -19,7 +32,9 @@
             <th>Email</th>
             <th>Действия</th>
         </tr>
-        {% for teacher in Teacher %}
+    </thead>
+       <tbody>
+        {% for teacher in teachers.items %}
         <tr>
             <td>{{ teacher.ID_teacher }}</td>
             <td>{{ teacher.ID_subject }}</td>
@@ -27,14 +42,26 @@
             <td>{{ teacher.surname}}</td>
             <td>{{ teacher.email }}</td>
             <td>
-                <a href="{{ url_for('edit_teacher', ID_teacher=teacher.ID_teacher) }}">Редактировать</a>
+                <a href="{{ url_for('edit_teacher', ID_teacher=teacher.ID_teacher) }}" class="btn btn-warning">Редактировать</a>
                 <form method="POST" action="{{ url_for('delete_teacher', ID_teacher=teacher.ID_teacher) }}" style="display:inline;">
-                    <input type="submit" value="Удалить" onclick="return confirm('Вы уверены, что хотите удалить этого преподавателя?');">
+                    <input type="submit" class="btn btn-danger" value="Удалить" onclick="return confirm('Вы уверены, что хотите удалить этого преподавателя?');">
                 </form>
             </td>
         </tr>
         {% endfor %}
+    </tbody>
     </table>
+
+    <div class="pagination">
+        {% if teachers.has_prev %}
+            <a href="{{ url_for('view_teachers', page=teachers.prev_num, name=name, surname=surname) }}" class="btn btn-primary">Предыдущая</a>
+        {% endif %}
+        <span>Страница {{ teachers.page }} из {{ teachers.pages }}</span>
+        {% if teachers.has_next %}
+            <a href="{{ url_for('view_teachers', page=teachers.next_num, name=name, surname=surname) }}" class="btn btn-primary">Следующая</a>
+        {% endif %}
+    </div>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
