--- a/templates/kurators.html
+++ b/templates/kurators.html
@@ -9,9 +9,25 @@
 </head>
 <body>
     <h1>Список кураторов</h1>
-    <a href="kurators/add">Добавить куратора</a>
-    <a href="/">На главную</a>
-    <table border="1">
+    <a href="kurators/add" class="btn btn-primary">Добавить куратора</a>
+    <a href="/" class="btn btn-secondary">На главную</a>
+    <form method="GET" action="{{ url_for('view_kurators') }}" class="mt-3 mb-3">
+        <div class="row">
+            <div class="col">
+                <input type="text" name="name" class="form-control" placeholder="Имя" value="{{ name }}">
+            </div>
+            <div class="col">
+                <input type="text" name="surname" class="form-control" placeholder="Фамилия" value="{{ surname }}">
+            </div>
+            <div class="col">
+                <input type="number" name="ID_kurs" class="form-control" placeholder="ID курса" value="{{ ID_kurs }}">
+            </div>
+            <div class="col">
+                <button type="submit" class="btn btn-success">Поиск</button>
+            </div>
+        </div>
+    </form>
+    <table class="table table-bordered">
         <tr>
             <th>ID_kur</th>
             <th>ID_kurs</th>
@@ -19,7 +35,7 @@
             <th>surname</th>
             <th>email</th>
         </tr>
-        {% for kurator in Kurator %}
+        {% for kurator in kurators.items %}
         <tr>
             <td>{{ kurator.ID_kur}}</td>
             <td>{{ kurator.ID_kurs }}</td>
@@ -27,14 +43,22 @@
             <td>{{ kurator.surname}}</td>
             <td>{{ kurator.email}}</td>
             <td>
-                <a href="{{ url_for('edit_kurator', ID_kur=kurator.ID_kur) }}">Редактировать</a>
+                <a href="{{ url_for('edit_kurator', ID_kur=kurator.ID_kur) }}" class="btn btn-warning">Редактировать</a>
                 <form method="POST" action="{{ url_for('delete_kurator', ID_kur=kurator.ID_kur) }}" style="display:inline;">
-                    <input type="submit" value="Удалить" onclick="return confirm('Вы уверены, что хотите удалить этого куратора?');">
+                    <input type="submit" value="Удалить" class="btn-danger" onclick="return confirm('Вы уверены, что хотите удалить этого куратора?');">
                 </form>
             </td>
         </tr>
         {% endfor %}
     </table>
-    
+    <div class="pagination">
+        {% if kurators.has_prev %}
+            <a href="{{ url_for('view_kurators', page=kurators.prev_num, name=name, surname=surname, ID_kurs = ID_kurs) }}" class="btn btn-primary">Предыдущая</a>
+        {% endif %}
+        <span>Страница {{ kurators.page }} из {{ kurators.pages }}</span>
+        {% if kurators.has_next %}
+            <a href="{{ url_for('view_kurators', page=kurators.next_num, name=name, surname=surname, ID_kurs = ID_kurs) }}" class="btn btn-primary">Следующая</a>
+        {% endif %}
+    </div>
 </body>
 </html>
