--- a/templates/upgrade_kur.html
+++ b/templates/upgrade_kur.html
@@ -3,32 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Редактировать студента</title>
+    <title>Редактировать курс</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
 </head>
 <body>
-    <h1>Редактировать студента</h1>
+    <h1>Редактировать курс</h1>
     <form method="POST">
-        <label>ID Кур:</label><br>
-        <input type="text" name="ID_kur" value="{{ Student.ID_kur }}" required><br>
-        <label>ID Группы:</label><br>
-        <input type="text" name="ID_group" value="{{ Student.ID_group }}" required><br>
-        <label>Имя:</label><br>
-        <input type="text" name="name" value="{{ Student.name}}" required><br>
-        <label>Фамилия:</label><br>
-        <input type="text" name="surname" value="{{ Student.surname }}" required><br>
-        <label>Возраст:</label><br>
-        <input type="number" name="age" value="{{ Student.age }}" required><br>
-        <label>Email:</label><br>
-        <input type="email" name="email" value="{{ Student.email }}" required><br>
-        <label>Паспорт:</label><br>
-        <input type="text" name="passport" value="{{ Student.passport }}" required><br>
-        <input type="submit" value="Сохранить">
+        <label>ID Курса:</label><br>
+        <input type="number" name="ID_kurs" value="{{ Kurses.ID_kurs }}" required><br>
+        <label>ID предмета</label><br>
+        <input type="number" name="ID_subject" value="{{ Kurses.ID_subject }}" required><br>
+        <label>ID преподавателя</label><br>
+        <input type="number" name="ID_teacher" value="{{ Kurses.ID_teacher}}" required><br>
+        <label>Название курса:</label><br>
+        <input type="text" name="title" value="{{ Kurses.title}}" required><br>
+        <label>Продолжительность:</label><br>
+        <input type="number" name="time" value="{{ Kurses.time }}" required><br>
+        <label>Стоимость:</label><br>
+        <input type="number" name="cost" value="{{ Kurses.cost }}" required><br>
+        <label>Дата начала:</label><br>
+        <input type="data" name="dateStart" value="{{ Kurses.dateStart }}" required><br>
+        <input type="submit" value="Сохранить" class="btn btn-primary">
     </form>
-    <form method="POST" action="{{ url_for('delete_student', ID_student=Student.ID_student) }}">
+    <form method="POST" action="{{ url_for('delete_kur', ID_kurs=Kurses.ID_kurs) }}">
         <input type="submit" value="Удалить" onclick="return confirm('Вы уверены, что хотите удалить этого студента?');">
     </form>
-    <a href="/students">На главную</a>
+    <a href="/kurses" class="btn btn-secondary">На главную</a>
 </body>
 </html>
