--- a/templates/upgrade_student.html
+++ b/templates/upgrade_student.html
@@ -24,11 +24,11 @@
         <input type="email" name="email" value="{{ Student.email }}" required><br>
         <label>Паспорт:</label><br>
         <input type="text" name="passport" value="{{ Student.passport }}" required><br>
-        <input type="submit" value="Сохранить">
+        <input type="submit" class="btn btn-primary" value="Сохранить">
     </form>
     <form method="POST" action="{{ url_for('delete_student', ID_student=Student.ID_student) }}">
         <input type="submit" value="Удалить" onclick="return confirm('Вы уверены, что хотите удалить этого студента?');">
     </form>
-    <a href="/students">На главную</a>
+    <a href="/students" class="btn btn-secondary">На главную</a>
 </body>
 </html>
