--- a/templates/kurators.html
+++ b/templates/kurators.html
@@ -45,7 +45,7 @@
             <td>
                 <a href="{{ url_for('edit_kurator', ID_kur=kurator.ID_kur) }}" class="btn btn-warning">Редактировать</a>
                 <form method="POST" action="{{ url_for('delete_kurator', ID_kur=kurator.ID_kur) }}" style="display:inline;">
-                    <input type="submit" value="Удалить" class="btn-danger" onclick="return confirm('Вы уверены, что хотите удалить этого куратора?');">
+                    <input type="submit" value="Удалить" class="btn btn-danger" onclick="return confirm('Вы уверены, что хотите удалить этого куратора?');">
                 </form>
             </td>
         </tr>
