new database and tables

--- a/templates/add_group.html
+++ b/templates/add_group.html
@@ -11,9 +11,7 @@
     <h1>Добавить группу</h1>
     <form method="POST">
         <label>Название группы</label><br>
-        <input type="text" name="titleGroup" required><br>
-        <label>ID_teacher</label><br>
-        <input type="number" name="ID_teacher" required><br>
+        <input type="text" name="group_name" required><br>
         <input type="submit" value="Добавить">
     </form>
     <a href="/groups">На главную</a>
