--- a/templates/index.html
+++ b/templates/index.html
@@ -10,12 +10,10 @@
 <body>
     <h1>Добро пожаловать в систему управления базой данных</h1>
     <ul>
-        <li><a href="/students">Студенты</a></li>
-        <li><a href="/teachers">Преподаватели</a></li>
-        <li><a href="/subjects">Предметы</a></li>
-        <li><a href="/groups">Группы</a></li>
-        <li><a href="/kurses">Курсы</a></li>
-        <li><a href="/kurators">Кураторы</a></li>
+        <li><a href="/products">Кондитерские изделия</a></li>
+        <li><a href="/brands">Бренды</a></li>
+        <li><a href="/groups">Группы изделий</a></li>
+        <li><a href="/manufacturers">Заводы</a></li>
     </ul>
 </body>
 </html>
