--- a/templates/add_manufacturer.html
+++ b/templates/add_manufacturer.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Добавить предмет</title>
+    <title>Добавить завод</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
 </head>
 <body>
-    <h1>Добавить предмет</h1>
+    <h1>Добавить завод</h1>
     <form method="POST">
-        <label>Название предмета</label><br>
-        <input type="text" name="title" required><br>
+        <label>Наименование завода</label><br>
+        <input type="text" name="name" required><br>
         <input type="submit" value="Добавить">
     </form>
-    <a href="/subjects">На главную</a>
+    <a href="/manufacturers">На главную</a>
 </body>
 </html>
 
