--- a/templates/groups.html
+++ b/templates/groups.html
@@ -3,21 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Группы</title>
+    <title>Группы изделий</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
 </head>
 <body>
-    <h1>Список групп</h1>
+    <h1>Список групп изделий</h1>
     <a href="/groups/add" class="btn btn-primary">Добавить группу</a>
     <a href="/" class="btn btn-secondary">На главную</a>
     <form method="GET" action="{{ url_for('view_groups') }}" class="mt-3 mb-3">
         <div class="row">
             <div class="col">
-                <input type="text" name="titleGroupclass="form-control" placeholder="Название группы" value="{{ titleGroup}}">
-            </div>
-            <div class="col">
-                <input type="number" name="ID_teacher" class="form-control" placeholder="ID преподавателя" value="{{ ID_teacher}}">
+                <input type="text" name="group_name" class= "form-control" placeholder="Название группы" value="{{ group_name }}">
             </div>
             <div class="col">
                 <button type="submit" class="btn btn-success">Поиск</button>
@@ -26,19 +23,17 @@
     </form>
     <table class="table table-bordered">
         <tr>
-            <th>ID_group</th>
-            <th>titleGroup</th>
-            <th>ID_teacher</th>
+            <th>group_id</th>
+            <th>group_name</th>
             <th>Действия</th>
         </tr>
         {% for group in groups.items %}
         <tr>
-            <td>{{ group.ID_group }}</td>
-            <td>{{ group.titleGroup }}</td>
-            <td>{{ group.ID_teacher }}</td>
+            <td>{{ group.group_id }}</td>
+            <td>{{ group.group_name }}</td>
             <td>
-                <a href="{{ url_for('edit_group', ID_group=group.ID_group) }}" class="btn btn-warning">Редактировать</a>
-                <form method="POST" action="{{ url_for('delete_group', ID_group=group.ID_group) }}" style="display:inline;">
+                <a href="{{ url_for('edit_group', group_id=group.group_id) }}" class="btn btn-warning">Редактировать</a>
+                <form method="POST" action="{{ url_for('delete_group', group_id=group.group_id) }}" style="display:inline;">
                     <input type="submit" value="Удалить" class="btn btn-danger" onclick="return confirm('Вы уверены, что хотите удалить эту группу?');">
                 </form>
             </td>
@@ -47,11 +42,11 @@
     </table>
     <div class="pagination">
         {% if groups.has_prev %}
-            <a href="{{ url_for('view_groups', page=groups.prev_num, titleGroup=titleGroup, ID_tracher=ID_teacher) }}" class="btn btn-primary">Предыдущая</a>
+            <a href="{{ url_for('view_groups', page=groups.prev_num, group_name=group_name) }}" class="btn btn-primary">Предыдущая</a>
         {% endif %}
         <span>Страница {{ groups.page }} из {{ groups.pages }}</span>
         {% if groups.has_next %}
-            <a href="{{ url_for('view_groups', page=groups.next_num, titleGroup=titleGroup, ID_teacher=ID_teacher) }}" class="btn btn-primary">Следующая</a>
+            <a href="{{ url_for('view_groups', page=groups.next_num, group_name=group_name) }}" class="btn btn-primary">Следующая</a>
         {% endif %}
     </div>
 </body>
